--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,16 @@
-spring.application.name=booking-microservice
+#spring.application.name=booking-microservice
 
+#Definimos el perfil de properties que queremos cargar desde Config Server
+#spring.cloud.config.profile=dev
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/bookingdb
-spring.datasource.username=root
-spring.datasource.password=12345
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.generate.ddl=true
+#spring.datasource.username=root
+#spring.datasource.password=12345
 
-spring.jpa.open-in-view=false
+#server.port=0
 
-#server.port=8082
-server.port=0
-
-eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+#Para que cada instancia del microservicio tenga un unique name
+#eureka.instance.instance-id=${spring.application.name}:${random.uuid}
